# qwertty

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  bacon.toml  clippy.toml  justfile  release-plz.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: docs.yml  implementation.yml
.github/workflows/: ci.yml  codeql.yml  fuzz-deep.yml  pages.yml  release-plz.yml  zizmor.yml
db/: README.md  caniuse.md  conpty.toml  dec.toml  ecma48-csi.toml  ecma48-syntax.toml  iterm2.toml  kitty-color.toml  kitty-graphics.toml  kitty-keyboard.toml  kitty-misc.toml  kitty-multicursor.toml  kitty-pointer.toml  osc.toml  sources.toml  vendor-dcs.toml  xterm-capabilities.toml  xterm-input.toml  xterm-modes.toml  xterm-session.toml
db/captures/: FORMAT.md
db/results/: alacritty.toml  betamax.toml  foot.toml  kitty.toml  tmux.toml  wezterm.toml  xterm.toml
db/width/: alacritty.toml  betamax.toml  kitty.toml  tmux.toml  wezterm.toml
docs/: architecture.md  non-functional-requirements.md  roadmap.md  standards.md
docs/adr/: 0000-template.md  0001-async-first-terminal-io-boundary.md  0002-terminal-session-cleanup.md  0003-terminal-input-runtime-boundary.md  0004-basic-input-event-boundary.md  0005-utf8-input-text-decoding.md  0006-basic-escape-input-parsing.md  0007-stateful-input-decoder.md  0008-csi-input-sequence-values.md  0009-cursor-position-query-report.md  0010-cursor-position-response-matching.md  0011-tokio-async-runtime-boundary.md  0012-terminal-query-routing-boundary.md  0013-platform-support-policy.md  0014-crate-and-module-split-policy.md  0015-versioning-and-compatibility-policy.md  0016-dependency-policy.md  0017-first-release-target.md  0018-first-published-version.md  0019-input-and-command-vocabulary-freeze.md  0020-release-engineering-policy.md  0021-unsafe-code-policy.md  0022-windows-console-support-model.md
docs/agent/: architecture.md  testing.md  (+5 more)
examples/: alternate_screen.rs  build_status_line.rs  clipboard_policy.rs  decode_input_chunks.rs  decode_key_events.rs  decode_syntax_tokens.rs  editor_handoff.rs  fake_device.rs  input_event_viewer.rs  iterm2_inline_image.rs  kitty_graphics.rs  kitty_keyboard.rs  measure_string_width.rs  mouse_and_paste.rs  oneshot_background.rs  osc_families.rs  panic_safe_restore.rs  parse_cursor_position_report.rs  probe_capabilities.rs  raw_mode.rs  read_input_bytes.rs  resize_events.rs  scroll_region.rs  session_cycles.rs  session_status.rs  signal_handling.rs  styled_text.rs  suspend_resume.rs  sync_capability_probe.rs  sync_cursor_query.rs  synchronized_frame.rs  tokio_input_events.rs  tokio_late_query_reply.rs  tokio_preserved_unrelated_input.rs  tokio_query_cancellation.rs  tokio_query_error_handling.rs  tokio_terminal_queries.rs  tokio_terminal_status_cancellation.rs  tokio_terminal_status_preserved_input.rs  tokio_terminal_status_unmatched_query_input.rs  (+4 more)
fixtures/: FORMAT.md  IMPORT.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/correlator_properties/: all_three_kinds_interleaved  cursor_and_da1_two_replies_one_run  cursor_pending_with_noise_then_reply  only_noise  register_da1_fence_feed_resolve  register_feed_status_resolve
fuzz/corpus/syntax_no_panic_bounded/: all_bytes  bracketed_paste  c1_st_terminated_osc  can_aborted_csi  colon_sgr  dcs  focus  forty_param_csi  interleaved_utf8_esc  kitty_csi_u_alternates  kitty_flags_report  kitty_keyboard  large_osc  lone_c1_csi  lone_c1_dcs  lone_c1_st_stray  malformed  mid_limit_osc8  osc52_clipboard  osc8_hyperlink  partial_csi  partial_utf8  paste_false_end  seed_in_band_resize_cells_only  seed_in_band_resize_mode_lifecycle  sgr_mouse  sub_aborted_osc  unterminated_osc_then_text  win32_input_enable_disable  zero_limit_large_osc
fuzz/corpus/syntax_reconstruction/: bracketed_paste  c1_st_terminated_osc  can_aborted_csi  dcs  focus  forty_param_csi  interleaved_utf8_esc  kitty_csi_u_release  kitty_keyboard  kitty_push_query_pop  large_osc  lone_c1_csi  lone_c1_dcs  lone_c1_st_stray  malformed  osc8_hyperlink  partial_utf8  paste_8bit_end  paste_crlf  paste_embedded_sequences  paste_esc_run  seed_in_band_resize_storm_interleaved  seed_in_band_resize_with_pixels  sub_aborted_osc  unterminated_osc_then_text  win32_input_edge_cases
fuzz/corpus/syntax_split_equivalence/: all_bytes  bracketed_paste  c1_st_terminated_osc  can_aborted_csi  colon_sgr  dcs  focus  forty_param_csi  interleaved_utf8_esc  kitty_csi_u_functional  kitty_csi_u_zwj_text  kitty_keyboard  kitty_legacy_modified  large_osc  lone_c1_csi  lone_c1_dcs  lone_c1_st_stray  malformed  osc52_clipboard  osc8_hyperlink  partial_csi  partial_utf8  paste_empty  paste_unterminated  seed_in_band_resize_four_param  sgr_mouse  small_limit_large_osc  small_limit_osc52  sub_aborted_osc  unterminated_osc_then_text  win32_input_key_stream
fuzz/fuzz_targets/: correlator_properties.rs  syntax_no_panic_bounded.rs  syntax_reconstruction.rs  syntax_split_equivalence.rs
fuzz/src/: lib.rs
scripts/: build_site.sh  verify_emulators.sh
site/: book.toml
src/: caps.rs  command.rs  commands.rs  correlate.rs  docs.rs  escape.rs  event.rs  input.rs  lib.rs  policy.rs  report.rs  session.rs  syntax.rs  terminal.rs  tokio_session.rs  width.rs  width_table.rs
tapes/: verify_queries.tape
tests/: encoding.rs  event.rs  fixture_corpus.rs  input.rs  oneshot_residue.rs  session.rs  syntax.rs  terminal_device.rs  tokio_session.rs  windows_console.rs
tools/qdb/: Cargo.toml
tools/qdb/src/: capture.rs  escape.rs  generate.rs  lib.rs  main.rs  matrix.rs  model.rs  orchestrate.rs  probe.rs  runner.rs  targets.rs  validate.rs  width.rs
tools/qdb/src/targets/: alacritty.rs  betamax.rs  conpty.rs  conpty_frame.rs  conpty_sys.rs  foot.rs  kitty.rs  relay.rs  relay_conpty.rs  tmux.rs  util.rs  wezterm.rs  xterm.rs
tools/qdb/tests/: generate_check.rs  golden.rs  validate.rs  width_table.rs
tools/qdb/tests/golden/: kitty-pointer.md
(+681 files in other folders)
