# The root package `qwertty` is the sole publishable crate. `tools/qdb` is an unpublished
# workspace member (developer tooling for the sequence database); it shares no semver with the
# library, so it lives beside it rather than inside it (ADR-0014).
[workspace]
members = ["tools/qdb"]

[package]
name = "qwertty"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal application building blocks for explicit ownership, ordered output, and policy-aware features."
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/qwertty"
readme = "README.md"
keywords = ["terminal", "tui", "ansi", "tty"]
categories = ["command-line-interface"]
publish = false

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tokio = ["dep:tokio"]

# `missing_docs` is enforced on the library via `#![warn(missing_docs)]` in `src/lib.rs`, not
# here: a package-level lint applies to every target, which fails an integration test that is
# entirely `#![cfg(unix)]` (and thus an empty crate) on non-Unix targets like the Windows CI job.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dev-dependencies]
loom = "0.7"

# `test-util` enables `tokio::time::{pause, advance}` and `#[tokio::test(start_paused = true)]`,
# used by the Tokio session's deterministic timing tests (the lone-Escape flush window). It is a
# dev-only feature, so it never ships to downstream consumers of the `tokio` feature.
[target.'cfg(unix)'.dev-dependencies]
tokio = { version = "1", default-features = false, features = ["test-util"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = [
    "event",
    "fs",
    "process",
    "pty",
    "stdio",
    "termios",
] }
tokio = { version = "1", optional = true, default-features = false, features = [
    "macros",
    "net",
    "rt",
    "signal",
    "time",
] }
