# The root package `qwertty` is the sole publishable crate. `tools/qdb` is an unpublished
# workspace member (developer tooling for the sequence database); it shares no semver with the
# library, so it lives beside it rather than inside it (ADR-0014).
[workspace]
members = ["tools/qdb"]

[package]
name = "qwertty"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "Terminal application building blocks for explicit ownership, ordered output, and policy-aware features."
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/qwertty"
readme = "README.md"
keywords = ["terminal", "tui", "ansi", "tty"]
categories = ["command-line-interface"]
# Keep the published tarball to what a downstream consumer compiles against. The library reads only
# `docs/reference/*.md` at build time (via `include_str!` in `src/docs.rs`), so `src`, `docs`,
# `examples`, `README.md`, and the `LICENSE-*` files stay; everything else is test data, capture
# sidecars, tooling, or repo infrastructure. `db/` is excluded because nothing in `src/` reads it at
# compile time (the `qdb` tool, which is unpublished, reads it at runtime from the working tree).
exclude = [
    "/.github",
    "/db",
    "/fixtures",
    "/fuzz",
    "/scripts",
    "/tapes",
    "/tests",
    "/tools",
    "/work",
]

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tokio = ["dep:tokio"]

# `missing_docs` is enforced on the library via `#![warn(missing_docs)]` in `src/lib.rs`, not
# here: a package-level lint applies to every target, which fails an integration test that is
# entirely `#![cfg(unix)]` (and thus an empty crate) on non-Unix targets like the Windows CI job.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }
# `deny`, not `forbid`, so the `#[cfg(windows)]` console modules can each scope an
# `#[allow(unsafe_code)]` over their `windows-sys` FFI. `forbid` cannot be locally overridden, and
# every Windows console entry point (CreateFileW, SetConsoleMode, ReadConsoleInputW, WriteFile,
# WaitForMultipleObjects, …) is an `unsafe extern "system"` call with no safe wrapper in the
# dependency tree. The Unix/pure crate carries no `unsafe` and stays effectively forbidden: the only
# `#[allow(unsafe_code)]` opt-ins in the tree are the `#[cfg(windows)]` FFI modules (the console
# device, its input reader, the readiness worker, and the restore handle). See ADR 0021 and
# work/phase4/windows-readiness-analysis.md (pre-freeze finding: unsafe policy).
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"

# Platform-neutral runtime deps. Width measurement (`width_of`) needs both: `unicode-width` for the
# static column-width baseline, and `unicode-segmentation` to split a string into grapheme clusters
# so the per-terminal deviation table (design 09-width) can override a whole cluster. Both are the
# unicode-rs reference crates, dependency-free.
[dependencies]
unicode-segmentation = "1.12"
unicode-width = "0.2"

[dev-dependencies]
loom = "0.7"

# `test-util` enables `tokio::time::{pause, advance}` and `#[tokio::test(start_paused = true)]`,
# used by the Tokio session's deterministic timing tests (the lone-Escape flush window). It is a
# dev-only feature, so it never ships to downstream consumers of the `tokio` feature.
[target.'cfg(unix)'.dev-dependencies]
tokio = { version = "1.37", default-features = false, features = ["test-util"] }

# The `#![cfg(windows)]` integration test (tests/windows_console.rs) needs `AllocConsole` to attach a
# console before driving the public `Terminal` surface headlessly on CI. Only the console feature is
# pulled in for tests; the library's own console FFI lives under `[target.'cfg(windows)'.dependencies]`.
[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console"] }

# Floors are real (the CI minimal-versions job builds against them): tokio 1.37 is the first with
# `AsyncFd::try_new`, rustix 1.1 the first with `Pid::as_raw_pid`. qdb shares the rustix dep, so
# its floor must stay consistent with this one for the workspace to resolve a single version.
[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = [
    "event",
    "fs",
    "process",
    "pty",
    "stdio",
    "termios",
] }
tokio = { version = "1.37", optional = true, default-features = false, features = [
    "macros",
    "net",
    "rt",
    "signal",
    "time",
] }

# Windows console FFI for the `#[cfg(windows)]` terminal device (src/terminal/windows.rs) and the
# async readiness worker (src/tokio_session/readiness.rs). Only the raw console entry points the
# device and worker call are pulled in — no higher-level wrappers — so the crate talks to the
# console host directly (ADR 0022). `Win32_Security` and `Win32_System_IO` carry only the
# `SECURITY_ATTRIBUTES` and `OVERLAPPED` types named (as null pointers) in the `CreateFileW` and
# `WriteFile` signatures. `Win32_System_Threading` carries the waker event and cancellable-wait
# primitives (`CreateEventW`, `SetEvent`, `WaitForMultipleObjects`) the readiness worker uses
# instead of an `AsyncFd` equivalent (ADR 0022 §4; MW-2).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Threading",
] }
# The Tokio session runs on Windows through the worker-thread readiness transport (MW-2): the worker
# feeds a `tokio::sync::mpsc` channel the async session `recv`s. Windows needs no reactor
# registration (`net`); it needs the channel (`sync`), the deadline clock (`time`), a current-thread
# runtime for the driver, the test macros, and — for `signals()` (MW-3) — the `signal` feature that
# carries `tokio::signal::windows` console control listeners (Ctrl+C/Ctrl+Break/close). The floor
# matches the Unix `tokio` floor so the workspace resolves a single version (see the `cfg(unix)`
# note above).
tokio = { version = "1.37", optional = true, default-features = false, features = [
    "macros",
    "rt",
    "signal",
    "sync",
    "time",
] }
