[package]
name = "qdb"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "Developer tooling for the qwertty sequence database: validate and generate."
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "qdb"
path = "src/lib.rs"

[[bin]]
name = "qdb"
path = "src/main.rs"

[dependencies]
# serde: derive the entry/source structs straight from TOML tables; the schema is a
# hand-curated record format, so declarative deserialization is the whole job.
serde = { version = "1.0.225", features = ["derive"] }
# toml: the database is TOML (design 05); this is the reference parser and the smallest one
# that round-trips the table-array shape we use.
toml = "1.1"
# serde_json: the capture probe emits one JSON line per query (the collab-ask-4 sidecar handshake
# is "raw bytes + a TOML sidecar"; the probe->orchestrator wire is JSON lines). The orchestrator
# reads them back; a shared serde model keeps that contract honest.
serde_json = "1.0.25"

# qwertty: the library under test. The capture harness is its first partial consumer of the
# conformance Target interface — `qdb capture-probe` drives a real terminal through the
# library's own device + syntax layers (design 05 live-capture harness). A path dependency,
# never published: qdb shares no semver with the library (ADR-0014).
qwertty = { path = "../.." }

# rustix: the probe drains reply bytes off the terminal fd, waiting on `FIONREAD` (bytes-available)
# with a per-query deadline — poll(2)/select(2) on a slave pty are unreliable on macOS, so the
# adapter's efficient wait is a light FIONREAD poll instead. qwertty already depends on rustix;
# qdb reuses it. Unix-only, matching the probe.
[target.'cfg(unix)'.dependencies]
# Floor consistent with the root crate's rustix dep (see the note there).
rustix = { version = "1.1", features = ["stdio"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
