[package]
name = "qdb"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "Developer tooling for the qwertty sequence database: validate and generate."
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "qdb"
path = "src/lib.rs"

[[bin]]
name = "qdb"
path = "src/main.rs"

[dependencies]
# serde: derive the entry/source structs straight from TOML tables; the schema is a
# hand-curated record format, so declarative deserialization is the whole job.
serde = { version = "1.0.225", features = ["derive"] }
# toml: the database is TOML (design 05); this is the reference parser and the smallest one
# that round-trips the table-array shape we use.
toml = "1.1"
# serde_json: the per-entry capture sidecars under `db/captures/` are JSON (schema documented in
# db/captures/FORMAT.md — the collab-ask-4 handshake); a shared serde model keeps that contract
# honest.
serde_json = "1.0.25"

# qwertty: the library under test. The conformance runner drives real terminals through the
# library's own device + syntax layers — the in-terminal relay (`qdb target-relay`) opens the
# controlling tty via `Terminal` (design 05 live-capture harness). A path dependency, never
# published: qdb shares no semver with the library (ADR-0014).
qwertty = { path = "../.." }

# rustix: the relay waits for tty reply bytes on `FIONREAD` (bytes-available) — poll(2)/select(2)
# on a slave pty are unreliable on macOS, so the efficient wait is a light FIONREAD poll — and
# the adapter side opens/configures the relay FIFOs (nonblocking open, fcntl). qwertty already
# depends on rustix; qdb reuses it. Unix-only, matching the adapters.
[target.'cfg(unix)'.dependencies]
# Floor consistent with the root crate's rustix dep (see the note there).
rustix = { version = "1.1", features = ["fs", "stdio"] }

# Windows console FFI for the `#[cfg(windows)]` ConPTY conformance target (issue #196 item 2): the
# pseudo-console host (`src/targets/conpty.rs`), its relay child (`src/targets/relay_conpty.rs`),
# and the shared handle/pipe primitives (`src/targets/conpty_sys.rs`). Only the raw entry points
# those modules call are pulled in, matching the library's `windows-sys` major (0.59):
#   - Win32_Foundation:          HANDLE/BOOL, CloseHandle, GetLastError, WAIT_OBJECT_0, error codes.
#   - Win32_System_Console:      CreatePseudoConsole/Resize/Close, GetStdHandle, COORD, HPCON.
#   - Win32_System_Threading:    STARTUPINFOEXW + proc-thread attribute list, CreateProcessW,
#                                WaitForSingleObject/TerminateProcess.
#   - Win32_System_Pipes:        CreatePipe, CreateNamedPipeW, ConnectNamedPipe, PeekNamedPipe.
#   - Win32_Storage_FileSystem:  CreateFileW/ReadFile/WriteFile, OPEN_EXISTING, PIPE_ACCESS_DUPLEX.
#   - Win32_Security:            SECURITY_ATTRIBUTES, a null-pointer parameter of CreatePipe /
#                                CreateNamedPipeW / CreateFileW / CreateProcessW (required by those
#                                signatures, hence beyond the first-pass feature list).
#   - Win32_System_IO:           OVERLAPPED, a null-pointer parameter of ReadFile / WriteFile /
#                                ConnectNamedPipe (likewise required by their signatures).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[lints.rust]
missing_docs = "warn"
# `deny`, not `forbid`, so the `#[cfg(windows)]` ConPTY modules can each scope an
# `#[allow(unsafe_code)]` over their `windows-sys` FFI (mirrors the root crate; ADR 0021). `forbid`
# cannot be locally overridden. The Unix/pure qdb build carries no `unsafe` and stays effectively
# forbidden — the only opt-ins are those `#[cfg(windows)]` FFI modules.
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
